src/test/ui/generic-associated-types/issue-70304.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-70304.rs:55:41
   |
LL | fn create_doc() -> impl Document<Cursor<'_> = DocCursorImpl<'_>> {
   |                                         ^^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | fn create_doc() -> impl Document<Cursor<'static> = DocCursorImpl<'_>> {
   |                                         ^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
